Fix scrollbar of entry details sidebar (#5)

--- a/src/app/main/components/entry-details/entry-details.component.scss
+++ b/src/app/main/components/entry-details/entry-details.component.scss
@@ -1,4 +1,5 @@
 @import 'variables';
+@import 'mixins';
 
 :host {
     display: block;
@@ -9,6 +10,9 @@
     z-index: 2;
     right: 0;
     font-size: 0.8rem;
+    overflow: auto;
+        
+    @include scrollbar;
 }
 
 .details-container {
